syntax = "proto3";

package api;

import "google/api/annotations.proto";

service Ping {
    rpc SayHello(PingMessage) returns (PingMessage) {
        option (google.api.http) = {
      post: "/1/ping"
      body: "*"
    };
    }

    rpc GetAnnouncedVersion(AnnouncedVersionRequest) returns (AnnouncedVersionResponse) {
        option (google.api.http)  = {
            get :"/getAnnouncedVersion"
        };
    }
}

message PingMessage {
    string greeting = 1;
}

message AnnouncedVersionRequest {
    string namespace = 1;
    string entity = 2;
}

message AnnouncedVersionResponse {
    string currentversion =1;
}